--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,4 @@ bower_components/
 .history/templates/base_20210210120702.html
 .history/README_20210209104203.md
 .history/README_20210210121634.md
+.history/
