--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "python.pythonPath": "c:\\Users\\ethan\\Downloads\\My Untitled Project\\env\\Scripts\\python.exe"
+    "python.pythonPath": "c:\\Users\\ethan\\Downloads\\My Untitled Project\\env\\Scripts\\python.exe",
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": false
 }
