--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.4.4",
   "description": "This is a test for tiramisu, a Hypixel player stats website created by literaiiy.",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "postcss-cli": "^8.3.1",
+    "postcss-cli-simple": "^3.1.0",
+    "postcss-import": "^14.0.1"
+  },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.9",
-    "tailwindcss": "^2.0.4"
+    "postcss": "^8.2.12",
+    "tailwindcss": "^2.1.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "postcss /static/base.css -o /static/twind.css"
   },
   "repository": {
     "type": "git",
